k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  selector:
    app: helloworld
  ports:
    - name: http
      port: 80
      targetPort: http
